@@ -4,6 +4,10 @@ Changelog
 1.0b4 - unreleased
 ------------------
 
+* Improve robustness: catch and log import errors when trying to resolve
+  behaviours.
+  [wichert]
+
 * Add German translation from Christian Stengel.
   [wichert]
 
